--- a/vue/pastille.html
+++ b/vue/pastille.html
@@ -2,14 +2,14 @@
 <div id="pastille">
 	<div class="stiker">
 		<label class="container"><img src="img/coeur.png"/>
-  			<input type="radio" checked="checked" name="radio">
+  			<input id="r1" type="radio" checked="checked" name="radio" value="img/coeur.png">
   			<span class="checkmark"></span>
 		</label>
 	</div>
 
 	<div class="stiker">
 		<label class="container"><img src="img/spider.png"/>
-  			<input type="radio" name="radio">
+  			<input id="r2" type="radio" name="radio" value="img/spider.png">
   			<span class="checkmark"></span>
 		</label>
 	</div>
@@ -17,14 +17,14 @@
 
 	<div class="stiker">
 		<label class="container"><img src="img/wings.png"/>
-  			<input type="radio" name="radio">
+  			<input id="r3" type="radio" name="radio" value-"img/wings.png">
   			<span class="checkmark"></span>
 		</label>
 	</div>
 
 	<div class="stiker">
 		<label class="container"><img src="img/cadre.png"/>
-  			<input type="radio" name="radio">
+  			<input id="r4" type="radio" name="radio" value="img/cadre.png">
   			<span class="checkmark"></span>
 		</label>
 	</div>
