--- a/vue/video.html
+++ b/vue/video.html
@@ -2,7 +2,16 @@
 
 
 <div id="video">
+	<p> <img style="display:none" id="photo" src="/photo_upload/tmp" > </p>
 	<video autoplay></video>
 	<canvas style="display:none;"></canvas>
-	<input type="button" name="screenShot" value="Take ScreenShot" id="screenshot-button">
+	<form enctype="multipart/form-data" method="post" action=/montage>
+		<p style="display:none" id="get_file">
+			Veuillez choisir une photo de vous</br>
+			<input type="file" name="myFile"></br>
+			<input type="submit" name="submit">
+		</p>
+
+	<input style="display:none" type="button" name="screenShot" value="Take ScreenShot" id="screenshot-button">
+	</form>
 </div>
