--- a/vue/new_password_form.html
+++ b/vue/new_password_form.html
@@ -4,6 +4,6 @@
 	<form method="post" action="/changement-password" >
 		<p>New Password :</br><input type="password" name="passwd1"></p>
 		<p>Retype password :</br><input type="password" name="passwd2"></p>
-		<p><input type="submit" name="submit" value="Sign-Up"></p>
+		<p><input type="submit" name="submit" value="Update password"></p>
 	</form>
 </div>
