--- a/vue/sign_in.html
+++ b/vue/sign_in.html
@@ -1,8 +1,8 @@
 <h1>Sign-In</h1>
 
 <div class="form">
-	<form method="post" action="sign_in_traitement.php" >
-		<p>Login :</br> <input type="text" name="login"> </p>
+	<form method="post" action="/sign-in" >
+		<p>Login :</br> <input type="text" name="login"></p>
 		<p>Password :</br><input type="password" name="passwd"></p>
 		<p id="passwda"><input type="submit" name="submit" value="Sign-In"></p>
 		<p id="new_passwd"><a href="/new-password-request">Mot de passe oublie</a></p>
