--- a/vue/new_password_form.html
+++ b/vue/new_password_form.html
@@ -1,9 +1,30 @@
+<h1 class="title">Nouveau mot de passe</h1>
 
-<h1>New password</h1>
-<div class="form">
-	<form method="post" action="/changement-password" >
-		<p>New Password :</br><input type="password" name="passwd1"></p>
-		<p>Retype password :</br><input type="password" name="passwd2"></p>
-		<p><input type="submit" name="submit" value="Sign-Up"></p>
-	</form>
+
+<div class="container">
+	<div class="columns">
+		<div class="column"></div>
+		<div class="column is-one-quarter">
+			<div class="form">
+				<form method="post" action="/changement-password" >
+					<div class="field">
+						<label class="label">Mot de passe</label>
+						<div class="control">
+							<input class="input" type="password" name="passwd1"  placeholder="Mot de passe">
+						</div>
+					</div>
+					<div class="field">
+						<label class="label">Retaper</label>
+						<div class="control">
+							<input class="input" type="password" name="passwd2"  placeholder="Mot de passe">
+						</div>
+					</div>
+					<div class="control">
+						<input  class="button is-link"    type="submit" name="submit" value="Sign-Up">
+					</div>
+				</form>
+			</div>
+		</div>
+		<div class="column"></div>
+	</div>
 </div>
