--- a/vue/new_password_form_requested.html
+++ b/vue/new_password_form_requested.html
@@ -1,10 +1,29 @@
+<h1 class="title">Demande de nouveau mot de passe</h1>
 
-<h1>Demande de nouveau mot de passe</h1>
-
-<div class="form">
-	<form method="post" action="/new-password-request" >
-		<p>Login :</br> <input type="text" name="login"> </p>
-		<p>Mail :</br><input type="text" name="mail"></p>
-		<p id="passwda"><input type="submit" name="submit" value="Envoyer"></p>
-	</form>
+<div class="container">
+	<div class="columns">
+		<div class="column"></div>
+		<div class="column is-one-quarter">
+			<div class="form">
+				<form method="post" action="/new-password-request" >
+					<div class="field">
+						<label class="label">Identifiant</label>
+						<div class="control">
+							<input class="input" type="text" name="login"  placeholder="Identifiant">
+						</div>
+					</div>
+					<div class="field">
+						<label class="label">Adresse mail</label>
+						<div class="control">
+							<input class="input" type="text" name="mail"  placeholder="Adresses mail">
+						</div>
+					</div>
+					<div class="control">
+						<input  class="button is-link"     type="submit" name="submit" value="Envoyer">
+					</div>
+				</form>
+			</div>
+		</div>
+		<div class="column"></div>
+	</div>
 </div>
