--- a/vue/sign_in.html
+++ b/vue/sign_in.html
@@ -1,24 +1,28 @@
-
-
-<h1 class="title">Sign-In</h1>
-
-
 <div class="container">
 	<div class="columns">
 		<div class="column"></div>
 		<div class="column is-one-quarter">
+			<div class="content has-text-centered">
+				<h1 class="title">Sign-In</h1>
+			</div>
 			<div class="form">
 				<form method="post" action="/sign-in" >
 					<div class="field">
 						<label class="label">Identifiant</label>
-						<div class="control">
+						<div class="control has-icons-left">
 							<input class="input" type="text" name="login"  placeholder="Identifiant">
+							<span class="icon is-small is-left">
+								<i class="fas fa-user"></i>
+							</span>
 						</div>
 					</div>
 					<div class="field">
 						<label class="label">Mot de passe</label>
-						<div class="control">
+						<div class="control has-icons-left">
 							<input class="input" type="password" name="passwd"  placeholder="Mot de passe">
+							<span class="icon is-small is-left">
+								<i class="fas fa-lock"></i>
+							</span>
 						</div>
 					</div>
 					<div class="control">
