--- a/vue/new_password_form_requested.html
+++ b/vue/new_password_form_requested.html
@@ -1,5 +1,6 @@
-<h1 class="title">Demande de nouveau mot de passe</h1>
-
+<div class="content has-text-centered">
+	<h1 class="title">Demande de nouveau mot de passe</h1>
+</div>
 <div class="container">
 	<div class="columns">
 		<div class="column"></div>
@@ -8,14 +9,20 @@
 				<form method="post" action="/new-password-request" >
 					<div class="field">
 						<label class="label">Identifiant</label>
-						<div class="control">
+						<div class="control has-icons-left">
 							<input class="input" type="text" name="login"  placeholder="Identifiant">
+							<span class="icon is-small is-left">
+								<i class="fas fa-user"></i>
+							</span>
 						</div>
 					</div>
 					<div class="field">
 						<label class="label">Adresse mail</label>
-						<div class="control">
+						<div class="control has-icons-left">
 							<input class="input" type="text" name="mail"  placeholder="Adresses mail">
+							<span class="icon is-small is-left">
+ 	 	 	 	 	 	 	 	 <i class="fas fa-envelope"></i>
+							</span>
 						</div>
 					</div>
 					<div class="control">
