--- a/vue/sign_up_form.html
+++ b/vue/sign_up_form.html
@@ -1,27 +1,38 @@
-<h1 class="title">Sign-Up</h1>
 
 <div class="container">
 	<div class="columns">
 		<div class="column"></div>
 		<div class="column is-one-quarter">
+			<div class="content has-text-centered">
+				<h1 class="title">Sign-Up</h1>
+			</div>
 			<div class="form">
 				<form method="post" action="/sign-up" >
 					<div class="field">
 						<label class="label">Identifiant</label>
-						<div class="control">
+						<div class="control has-icons-left">
 							<input class="input" type="text" name="login"  placeholder="Identifiant">
+							<span class="icon is-small is-left">
+								<i class="fas fa-user"></i>
+							</span>
 						</div>
 					</div>
 					<div class="field">
 						<label class="label">Adresse mail</label>
-						<div class="control">
-							<input class="input" type="text" name="mail"  placeholder="Adresses mail">
+						<div class="control has-icons-left">
+							<input class="input" type="text" name="mail"  placeholder="Adresse mail">
+							<span class="icon is-small is-left">
+ 	 	 	 	 	 	 	 	 <i class="fas fa-envelope"></i>
+							</span>
 						</div>
 					</div>
 					<div class="field">
 						<label class="label">Mot de passe</label>
-						<div class="control">
+						<div class="control has-icons-left">
 							<input class="input" type="password" name="passwd"  placeholder="Mot de passe">
+							<span class="icon is-small is-left">
+								<i class="fas fa-lock"></i>
+							</span>
 						</div>
 					</div>
 					<div class="control">
